--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     <a href="#" class="nav_links">Inicio</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#" class="nav_links">Qué hacemos</a>
+                    <a href="que-hacemos.html" class="nav_links">Qué hacemos</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#" class="nav_links">Calcular</a>
+                    <a href="calcular.html" class="nav_links">Calcular</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#" class="nav_links">Sobre nosotros</a>
+                    <a href="sobre-nosotros.html" class="nav_links">Sobre nosotros</a>
                 </li> 
                 <img src="./Imagenes/svg/exit.svg" class="nav_close" alt="Salida, Cultiva seguro">
             </ul>
