--- a/calcular.html
+++ b/calcular.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Calcular - Suelos Felices</title>
-  <link rel="stylesheet" href="estilos-comunes.css" />
+  <link rel="stylesheet" href="CSS/estilos-comunes.css" />
 </head>
 <body>
   <header>
